--- a/configs.ini
+++ b/configs.ini
@@ -3,6 +3,6 @@ CW = http://api.weatherapi.com/v1/current.json?key=9cbb575480b2445aa512327362029
 FC = http://api.weatherapi.com/v1/forecast.json?key=9cbb575480b2445aa51232736202909&q=city&days=dt
 
 [Err]
-500 = "Ohh, something goes wrong"
+500 = Sorry, no matching location found or an internal server error occured, try again later
 
 
